New features added in the file

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataViz AI</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css_1/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css_1/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css_1/slick.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css_1/templatemo-style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='scss/style.scss') }}">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <style>
     * {
